2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_span_new),
	(gst_ttmlparse_attribute_parse),
	(gst_ttmlparse_state_set_attribute),
	(gst_ttmlparse_state_get_attribute),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_state_reset):
	* src/gstttmlprivate.h:
	  - Support for the xml:space attribute which controls how CR chars
	    are to be treated.

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_sax_characters):
	  - Check for blank nodes in the proper place
	  - Do not output empty buffers

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_is_blank_node),
	(gst_ttmlparse_add_characters):
	  - Do not process blank nodes (only containing whitespace)

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_node_type_parse),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_sax_element_start),
	(gst_ttmlparse_sax_characters):
	* src/gstttmlprivate.h:
	  - Support for the <br /> tag

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_parse_time_expression),
	(gst_ttmlparse_attribute_parse),
	(gst_ttmlparse_state_set_attribute),
	(gst_ttmlparse_state_merge_attribute),
	(gst_ttmlparse_state_get_attribute), (gst_ttmlparse_state_reset):
	* src/gstttmlprivate.h:
	  - Support for frame time expression ('300f').
	  - Support for the frameRate and frameRateMultiplier attributes.
	  - Keep tick_rate internally instead of tick_period, for simplicity.
	  - Fix span duration calculation.

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_span_free),
	(gst_ttmlparse_span_new), (gst_ttmlparse_span_compare_id),
	(gst_ttmlparse_active_spans_add),
	(gst_ttmlparse_active_spans_remove), (gst_ttmlparse_event_free),
	(gst_ttmlparse_event_new_span_begin),